--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "filmsok_v2",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/react": "17.0.21",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "typescript": "4.4.3"
-  }
+	"name": "filmsok_v2",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --port 4000",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@heroicons/react": "^1.0.4",
+		"axios": "^0.21.4",
+		"next": "11.1.2",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"react-paginate": "^7.1.3"
+	},
+	"devDependencies": {
+		"@types/react": "17.0.21",
+		"@types/react-paginate": "^7.1.1",
+		"autoprefixer": "^10.3.4",
+		"eslint": "7.32.0",
+		"eslint-config-next": "11.1.2",
+		"postcss": "^8.3.6",
+		"tailwindcss": "^2.2.15",
+		"typescript": "4.4.3"
+	}
 }
