--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"next": "11.1.2",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"react-paginate": "^7.1.3"
+		"react-paginate": "^7.1.3",
+		"sharp": "^0.29.1"
 	},
 	"devDependencies": {
 		"@types/react": "17.0.21",
