--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@heroicons/react": "^1.0.4",
 		"axios": "^0.21.4",
+		"classnames": "^2.3.1",
 		"next": "11.1.2",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
